Fix hover colour in element tree getting stuck
Also change hover outline to match the grey.

--- a/data/inspector.css
+++ b/data/inspector.css
@@ -7,7 +7,7 @@ html, body {
 
 /* Highlight hovered / currently selected element */
 .hover {
-    outline: 1px solid #800000;
+    outline: 1px dashed lightgrey;
 }
 
 .selected {
